#####################
Nagios 2.x Change Log
#####################


2.2 - ??/??/2006
----------------
* Minor bug fix in availability CGI



2.1 - 03/27/2006
----------------
* Changed freshness logic so that passive checks don't immediately go stale after program restart
* Bug fix for minor memory leak in object cleanup code
* Bug fix for flapping notifications during scheduled downtime
* Bug fix for $TOTALHOSTSDOWNUNHANDLED$ macro
* Bug fix in sample minimal.cfg file
* Bug fix in status CGI when displaying servicegroups
* Bug fixes in computation of indeterminate time and scheduled downtime in availability CGI
* Bug fix with not deleting all comments associated with a service
* Lowered max plugin output length from 348 to 332 chars to run on 64-bit systems without problems
* Minor fix to p1.pl for embedded Perl interpreter
* Minor fixes to WAP interface (statuswml CGI)
* Minor bug fix to VRML interface (statuswrl CGI)
* Minor doc updates



2.0 - 02/07/2006
----------------
* Fix for segfault in timed event queue
* Removed length limitations for object vars/vals
* Updated config.sub and config.guess to versions from automake-1.9
* Doc updates



2.0rc2 - 01/10/2006
-------------------
* Fix for initialization of embedded Perl interpreter
* Fix for potential duplicate membership entry bug in (host/service/contact)groups
* Minor documentation updates



2.0rc1 - 12/27/2005
-------------------
* Event broker modifications:
	- Minor change to log timestamps
	- Changes to notification, check, event handler, and system command callbacks
	- Addition of acknowledgement callbacks
	- Addition of state change callbacks
* Minor bug fix to statuswml CGI
* Minor spec file updates
* Minor include file fix to remove duplicate _REENTRANT definitions affecting embedded Perl
* Bug fix in template resolution of contactgroups variable in contact definitions
* Fixed bug with comments not expiring (for some reason this was not previously implemented!)
* Minor embedded Perl changes